--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gulp-minify-html": "^1.0.6",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.1.2"
+    "gulp-uglify": "^2.1.2",
+    "pump": "^1.0.2",
+    "uglify-js": "^2.8.23"
   }
 }
