--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
+    "imagemin": "^5.2.2",
     "minifier": "^0.8.1",
     "pump": "^1.0.2",
     "uglify-js": "^2.8.23"
